--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -6,3 +6,9 @@ sky:
     database: sky_take_out
     username: root
     password: 265256
+# 阿里云OSS配置
+  alioss:
+    endpoint: oss-cn-beijing.aliyuncs.com
+    access-key-id: LTAI5tHCBb72UrnHj8NGJgSC
+    access-key-secret: g6tjauuihGGiszzjPddYjMoSHhfMMa
+    bucket-name: keevor-sky
