--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -1,4 +1,5 @@
 sky:
+# MySQL数据库配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     host: localhost
@@ -12,3 +13,8 @@ sky:
     access-key-id: LTAI5tHCBb72UrnHj8NGJgSC
     access-key-secret: g6tjauuihGGiszzjPddYjMoSHhfMMa
     bucket-name: keevor-sky
+# 配置redis信息
+  spring:
+    redis:
+      host: 192.168.92.100
+      port: 6379
