--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -2,16 +2,22 @@ server:
   port: 8080
 
 spring:
+  # 配置环境信息
   profiles:
     active: dev
   main:
     allow-circular-references: true
+  # 配置MySQL数据库信息
   datasource:
     druid:
       driver-class-name: ${sky.datasource.driver-class-name}
       url: jdbc:mysql://${sky.datasource.host}:${sky.datasource.port}/${sky.datasource.database}?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
       username: ${sky.datasource.username}
       password: ${sky.datasource.password}
+  # 配置redis信息
+  redis:
+    host: ${sky.spring.redis.host}
+    port: ${sky.spring.redis.port}
 
 mybatis:
   #mapper配置文件
@@ -42,3 +48,5 @@ sky:
     access-key-id: ${sky.alioss.access-key-id}
     access-key-secret: ${sky.alioss.access-key-secret}
     bucket-name: ${sky.alioss.bucket-name}
+
+
